added media query for mobile devices

--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
 /*    overflow-y: scroll;  */
 }
 
+@media screen and (max-width: 400px) {
+    #app {
+      width: 300px;
+    }
+  }
+
 #show-tasks {
     /* height: 300px; */
     border-bottom: 2px solid black;
