--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ body {
     color: red;
 }
 
-#add-tasks {
+.add-task-div {
     height: 50px;
 }
 
-#add-task {
+.task-name {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
